--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/x-date-pickers": "^7.1.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "encoding": "^0.1.13",
+    "firebase": "^10.11.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
